--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@supabase/supabase-js": "^2.49.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
+    "graphql": "^16.11.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
