--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
+    "react-router-dom": "^7.6.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
