--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.0.1",
     "framer-motion": "^12.18.1",
     "graphql": "^16.11.0",
     "highlight.js": "^11.11.1",
